Refactor: Use pattern matching for `instanceof` checks, remove unused methods, and simplify lambda expressions in test cases.